issue #15 - fix broken gap

--- a/docs/css/grid.css
+++ b/docs/css/grid.css
@@ -14,7 +14,7 @@
     background-color: white;
   }
 
-  .grid-show-gap {
+  .grid-show-gap .grid-row {
     background-color: transparent;
   }
 
